// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/basic/steps/demo/clickable.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-steps dcloud-steps-horizontal dcloud-steps-label-horizontal"
  >
    <div
      class="dcloud-steps-item dcloud-steps-item-process dcloud-steps-item-active"
    >
      <div
        class="dcloud-steps-item-container"
        role="button"
        tabindex="0"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <span
            class="dcloud-steps-icon"
          >
            1
          </span>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            Step 1
          </div>
          <div
            class="dcloud-steps-item-description"
          >
            This is a description.
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-steps-item dcloud-steps-item-wait"
    >
      <div
        class="dcloud-steps-item-container"
        role="button"
        tabindex="0"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <span
            class="dcloud-steps-icon"
          >
            2
          </span>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            Step 2
          </div>
          <div
            class="dcloud-steps-item-description"
          >
            This is a description.
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-steps-item dcloud-steps-item-wait"
    >
      <div
        class="dcloud-steps-item-container"
        role="button"
        tabindex="0"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <span
            class="dcloud-steps-icon"
          >
            3
          </span>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            Step 3
          </div>
          <div
            class="dcloud-steps-item-description"
          >
            This is a description.
          </div>
        </div>
      </div>
    </div>
  </div>,
  "1": <div
    class="dcloud-divider dcloud-divider-horizontal"
    role="separator"
  />,
  "2": <div
    class="dcloud-steps dcloud-steps-vertical"
  >
    <div
      class="dcloud-steps-item dcloud-steps-item-process dcloud-steps-item-active"
    >
      <div
        class="dcloud-steps-item-container"
        role="button"
        tabindex="0"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <span
            class="dcloud-steps-icon"
          >
            1
          </span>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            Step 1
          </div>
          <div
            class="dcloud-steps-item-description"
          >
            This is a description.
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-steps-item dcloud-steps-item-wait"
    >
      <div
        class="dcloud-steps-item-container"
        role="button"
        tabindex="0"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <span
            class="dcloud-steps-icon"
          >
            2
          </span>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            Step 2
          </div>
          <div
            class="dcloud-steps-item-description"
          >
            This is a description.
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-steps-item dcloud-steps-item-wait"
    >
      <div
        class="dcloud-steps-item-container"
        role="button"
        tabindex="0"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <span
            class="dcloud-steps-icon"
          >
            3
          </span>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            Step 3
          </div>
          <div
            class="dcloud-steps-item-description"
          >
            This is a description.
          </div>
        </div>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 3,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/steps/demo/customized-progress-dot.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-steps dcloud-steps-horizontal dcloud-steps-label-vertical dcloud-steps-dot"
  >
    <div
      class="dcloud-steps-item dcloud-steps-item-finish"
    >
      <div
        class="dcloud-steps-item-container"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <span
            class="dcloud-steps-icon"
          >
            <span
              class="dcloud-steps-icon-dot"
            />
          </span>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            Finished
          </div>
          <div
            class="dcloud-steps-item-description"
          >
            You can hover on the dot.
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-steps-item dcloud-steps-item-process dcloud-steps-item-active"
    >
      <div
        class="dcloud-steps-item-container"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <span
            class="dcloud-steps-icon"
          >
            <span
              class="dcloud-steps-icon-dot"
            />
          </span>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            In Progress
          </div>
          <div
            class="dcloud-steps-item-description"
          >
            You can hover on the dot.
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-steps-item dcloud-steps-item-wait"
    >
      <div
        class="dcloud-steps-item-container"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <span
            class="dcloud-steps-icon"
          >
            <span
              class="dcloud-steps-icon-dot"
            />
          </span>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            Waiting
          </div>
          <div
            class="dcloud-steps-item-description"
          >
            You can hover on the dot.
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-steps-item dcloud-steps-item-wait"
    >
      <div
        class="dcloud-steps-item-container"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <span
            class="dcloud-steps-icon"
          >
            <span
              class="dcloud-steps-icon-dot"
            />
          </span>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            Waiting
          </div>
          <div
            class="dcloud-steps-item-description"
          >
            You can hover on the dot.
          </div>
        </div>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/steps/demo/error.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-steps dcloud-steps-horizontal dcloud-steps-label-horizontal"
  >
    <div
      class="dcloud-steps-item dcloud-steps-item-finish dcloud-steps-next-error"
    >
      <div
        class="dcloud-steps-item-container"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <span
            class="dcloud-steps-icon"
          >
            <span
              aria-label="check"
              class="anticon anticon-check dcloud-steps-finish-icon"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="check"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"
                />
              </svg>
            </span>
          </span>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            Finished
          </div>
          <div
            class="dcloud-steps-item-description"
          >
            This is a description
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-steps-item dcloud-steps-item-error dcloud-steps-item-active"
    >
      <div
        class="dcloud-steps-item-container"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <span
            class="dcloud-steps-icon"
          >
            <span
              aria-label="close"
              class="anticon anticon-close dcloud-steps-error-icon"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="close"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                />
              </svg>
            </span>
          </span>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            In Process
          </div>
          <div
            class="dcloud-steps-item-description"
          >
            This is a description
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-steps-item dcloud-steps-item-wait"
    >
      <div
        class="dcloud-steps-item-container"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <span
            class="dcloud-steps-icon"
          >
            3
          </span>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            Waiting
          </div>
          <div
            class="dcloud-steps-item-description"
          >
            This is a description
          </div>
        </div>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/steps/demo/icon.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-steps dcloud-steps-horizontal dcloud-steps-label-horizontal"
  >
    <div
      class="dcloud-steps-item dcloud-steps-item-finish dcloud-steps-item-custom dcloud-steps-item-active"
    >
      <div
        class="dcloud-steps-item-container"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <span
            class="dcloud-steps-icon"
          >
            <span
              aria-label="user"
              class="anticon anticon-user"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="user"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
                />
              </svg>
            </span>
          </span>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            Login
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-steps-item dcloud-steps-item-finish dcloud-steps-item-custom"
    >
      <div
        class="dcloud-steps-item-container"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <span
            class="dcloud-steps-icon"
          >
            <span
              aria-label="solution"
              class="anticon anticon-solution"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="solution"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M688 264c0-4.4-3.6-8-8-8H296c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h384c4.4 0 8-3.6 8-8v-48zm-8 136H296c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h384c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8zM480 544H296c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h184c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8zm-48 308H208V148h560v344c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V108c0-17.7-14.3-32-32-32H168c-17.7 0-32 14.3-32 32v784c0 17.7 14.3 32 32 32h264c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm356.8-74.4c29-26.3 47.2-64.3 47.2-106.6 0-79.5-64.5-144-144-144s-144 64.5-144 144c0 42.3 18.2 80.3 47.2 106.6-57 32.5-96.2 92.7-99.2 162.1-.2 4.5 3.5 8.3 8 8.3h48.1c4.2 0 7.7-3.3 8-7.6C564 871.2 621.7 816 692 816s128 55.2 131.9 124.4c.2 4.2 3.7 7.6 8 7.6H880c4.6 0 8.2-3.8 8-8.3-2.9-69.5-42.2-129.6-99.2-162.1zM692 591c44.2 0 80 35.8 80 80s-35.8 80-80 80-80-35.8-80-80 35.8-80 80-80z"
                />
              </svg>
            </span>
          </span>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            Verification
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-steps-item dcloud-steps-item-process dcloud-steps-item-custom"
    >
      <div
        class="dcloud-steps-item-container"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <span
            class="dcloud-steps-icon"
          >
            <span
              aria-label="loading"
              class="anticon anticon-loading anticon-spin"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="loading"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="0 0 1024 1024"
                width="1em"
              >
                <path
                  d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
                />
              </svg>
            </span>
          </span>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            Pay
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-steps-item dcloud-steps-item-wait dcloud-steps-item-custom"
    >
      <div
        class="dcloud-steps-item-container"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <span
            class="dcloud-steps-icon"
          >
            <span
              aria-label="smile"
              class="anticon anticon-smile"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="smile"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M288 421a48 48 0 1096 0 48 48 0 10-96 0zm352 0a48 48 0 1096 0 48 48 0 10-96 0zM512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm263 711c-34.2 34.2-74 61-118.3 79.8C611 874.2 562.3 884 512 884c-50.3 0-99-9.8-144.8-29.2A370.4 370.4 0 01248.9 775c-34.2-34.2-61-74-79.8-118.3C149.8 611 140 562.3 140 512s9.8-99 29.2-144.8A370.4 370.4 0 01249 248.9c34.2-34.2 74-61 118.3-79.8C413 149.8 461.7 140 512 140c50.3 0 99 9.8 144.8 29.2A370.4 370.4 0 01775.1 249c34.2 34.2 61 74 79.8 118.3C874.2 413 884 461.7 884 512s-9.8 99-29.2 144.8A368.89 368.89 0 01775 775zM664 533h-48.1c-4.2 0-7.8 3.2-8.1 7.4C604 589.9 562.5 629 512 629s-92.1-39.1-95.8-88.6c-.3-4.2-3.9-7.4-8.1-7.4H360a8 8 0 00-8 8.4c4.4 84.3 74.5 151.6 160 151.6s155.6-67.3 160-151.6a8 8 0 00-8-8.4z"
                />
              </svg>
            </span>
          </span>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            Done
          </div>
        </div>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/steps/demo/nav.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-steps dcloud-steps-horizontal site-navigation-steps dcloud-steps-small dcloud-steps-label-horizontal dcloud-steps-navigation"
  >
    <div
      class="dcloud-steps-item dcloud-steps-item-finish dcloud-steps-item-active"
    >
      <div
        class="dcloud-steps-item-container"
        role="button"
        tabindex="0"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <span
            class="dcloud-steps-icon"
          >
            <span
              aria-label="check"
              class="anticon anticon-check dcloud-steps-finish-icon"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="check"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"
                />
              </svg>
            </span>
          </span>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            Step 1
            <div
              class="dcloud-steps-item-subtitle"
              title="00:00:05"
            >
              00:00:05
            </div>
          </div>
          <div
            class="dcloud-steps-item-description"
          >
            This is a description.
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-steps-item dcloud-steps-item-process"
    >
      <div
        class="dcloud-steps-item-container"
        role="button"
        tabindex="0"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <span
            class="dcloud-steps-icon"
          >
            2
          </span>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            Step 2
            <div
              class="dcloud-steps-item-subtitle"
              title="00:01:02"
            >
              00:01:02
            </div>
          </div>
          <div
            class="dcloud-steps-item-description"
          >
            This is a description.
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-steps-item dcloud-steps-item-wait"
    >
      <div
        class="dcloud-steps-item-container"
        role="button"
        tabindex="0"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <span
            class="dcloud-steps-icon"
          >
            3
          </span>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            Step 3
            <div
              class="dcloud-steps-item-subtitle"
              title="waiting for longlong time"
            >
              waiting for longlong time
            </div>
          </div>
          <div
            class="dcloud-steps-item-description"
          >
            This is a description.
          </div>
        </div>
      </div>
    </div>
  </div>,
  "1": <div
    class="dcloud-steps dcloud-steps-horizontal site-navigation-steps dcloud-steps-label-horizontal dcloud-steps-navigation"
  >
    <div
      class="dcloud-steps-item dcloud-steps-item-finish dcloud-steps-item-active"
    >
      <div
        class="dcloud-steps-item-container"
        role="button"
        tabindex="0"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <span
            class="dcloud-steps-icon"
          >
            <span
              aria-label="check"
              class="anticon anticon-check dcloud-steps-finish-icon"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="check"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"
                />
              </svg>
            </span>
          </span>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            Step 1
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-steps-item dcloud-steps-item-process"
    >
      <div
        class="dcloud-steps-item-container"
        role="button"
        tabindex="0"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <span
            class="dcloud-steps-icon"
          >
            2
          </span>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            Step 2
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-steps-item dcloud-steps-item-wait"
    >
      <div
        class="dcloud-steps-item-container"
        role="button"
        tabindex="0"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <span
            class="dcloud-steps-icon"
          >
            3
          </span>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            Step 3
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-steps-item dcloud-steps-item-wait"
    >
      <div
        class="dcloud-steps-item-container"
        role="button"
        tabindex="0"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <span
            class="dcloud-steps-icon"
          >
            4
          </span>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            Step 4
          </div>
        </div>
      </div>
    </div>
  </div>,
  "2": <div
    class="dcloud-steps dcloud-steps-horizontal site-navigation-steps dcloud-steps-small dcloud-steps-label-horizontal dcloud-steps-navigation"
  >
    <div
      class="dcloud-steps-item dcloud-steps-item-finish dcloud-steps-item-active"
    >
      <div
        class="dcloud-steps-item-container"
        role="button"
        tabindex="0"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <span
            class="dcloud-steps-icon"
          >
            <span
              aria-label="check"
              class="anticon anticon-check dcloud-steps-finish-icon"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="check"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"
                />
              </svg>
            </span>
          </span>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            finish 1
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-steps-item dcloud-steps-item-finish"
    >
      <div
        class="dcloud-steps-item-container"
        role="button"
        tabindex="0"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <span
            class="dcloud-steps-icon"
          >
            <span
              aria-label="check"
              class="anticon anticon-check dcloud-steps-finish-icon"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="check"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"
                />
              </svg>
            </span>
          </span>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            finish 2
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-steps-item dcloud-steps-item-process"
    >
      <div
        class="dcloud-steps-item-container"
        role="button"
        tabindex="0"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <span
            class="dcloud-steps-icon"
          >
            3
          </span>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            current process
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-steps-item dcloud-steps-item-wait dcloud-steps-item-disabled"
    >
      <div
        class="dcloud-steps-item-container"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <span
            class="dcloud-steps-icon"
          >
            4
          </span>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            wait
          </div>
        </div>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 3,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/steps/demo/progress.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-steps dcloud-steps-horizontal dcloud-steps-with-progress dcloud-steps-label-horizontal"
  >
    <div
      class="dcloud-steps-item dcloud-steps-item-finish"
    >
      <div
        class="dcloud-steps-item-container"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <span
            class="dcloud-steps-icon"
          >
            <span
              aria-label="check"
              class="anticon anticon-check dcloud-steps-finish-icon"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="check"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"
                />
              </svg>
            </span>
          </span>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            Finished
          </div>
          <div
            class="dcloud-steps-item-description"
          >
            This is a description.
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-steps-item dcloud-steps-item-process dcloud-steps-item-active"
    >
      <div
        class="dcloud-steps-item-container"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <div
            class="dcloud-steps-progress-icon"
          >
            <div
              class="dcloud-progress dcloud-progress-circle dcloud-progress-status-normal dcloud-progress-show-info dcloud-progress-default"
            >
              <div
                class="dcloud-progress-inner"
                style="width:40px;height:40px;font-size:12px"
              >
                <svg
                  class="dcloud-progress-circle"
                  viewBox="0 0 100 100"
                >
                  <path
                    class="dcloud-progress-circle-trail"
                    d="M 50,50 m 0,-48
   a 48,48 0 1 1 0,96
   a 48,48 0 1 1 0,-96"
                    fill-opacity="0"
                    stroke-linecap="round"
                    stroke-width="4"
                    style="stroke-dasharray:301.59289474462014px 301.59289474462014px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
                  />
                  <path
                    class="dcloud-progress-circle-path"
                    d="M 50,50 m 0,-48
   a 48,48 0 1 1 0,96
   a 48,48 0 1 1 0,-96"
                    fill-opacity="0"
                    opacity="1"
                    stroke=""
                    stroke-linecap="round"
                    stroke-width="4"
                    style="stroke-dasharray:180.95573684677208px 301.59289474462014px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
                  />
                  <path
                    class="dcloud-progress-circle-path"
                    d="M 50,50 m 0,-48
   a 48,48 0 1 1 0,96
   a 48,48 0 1 1 0,-96"
                    fill-opacity="0"
                    opacity="0"
                    stroke=""
                    stroke-linecap="round"
                    stroke-width="4"
                    style="stroke:#52C41A;stroke-dasharray:0px 301.59289474462014px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
                  />
                </svg>
                <span
                  class="dcloud-progress-text"
                />
              </div>
            </div>
            <span
              class="dcloud-steps-icon"
            >
              2
            </span>
          </div>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            In Progress
            <div
              class="dcloud-steps-item-subtitle"
              title="Left 00:00:08"
            >
              Left 00:00:08
            </div>
          </div>
          <div
            class="dcloud-steps-item-description"
          >
            This is a description.
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-steps-item dcloud-steps-item-wait"
    >
      <div
        class="dcloud-steps-item-container"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <span
            class="dcloud-steps-icon"
          >
            3
          </span>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            Waiting
          </div>
          <div
            class="dcloud-steps-item-description"
          >
            This is a description.
          </div>
        </div>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/steps/demo/progress-debug.md correctly 1`] = `
LoadedCheerio {
  "0": <button
    class="dcloud-btn"
    type="button"
  >
    <span>
      Percentage to undefined
    </span>
  </button>,
  "1": <button
    class="dcloud-btn"
    type="button"
  >
    <span>
      Percentage +
    </span>
  </button>,
  "10": <div
    class="dcloud-steps dcloud-steps-vertical dcloud-steps-with-progress dcloud-steps-small"
  >
    <div
      class="dcloud-steps-item dcloud-steps-item-finish"
    >
      <div
        class="dcloud-steps-item-container"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <span
            class="dcloud-steps-icon"
          >
            <span
              aria-label="check"
              class="anticon anticon-check dcloud-steps-finish-icon"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="check"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"
                />
              </svg>
            </span>
          </span>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            Finished
          </div>
          <div
            class="dcloud-steps-item-description"
          >
            This is a description.
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-steps-item dcloud-steps-item-process dcloud-steps-item-active"
    >
      <div
        class="dcloud-steps-item-container"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <div
            class="dcloud-steps-progress-icon"
          >
            <div
              class="dcloud-progress dcloud-progress-circle dcloud-progress-status-normal dcloud-progress-show-info dcloud-progress-default"
            >
              <div
                class="dcloud-progress-inner"
                style="width:32px;height:32px;font-size:10.8px"
              >
                <svg
                  class="dcloud-progress-circle"
                  viewBox="0 0 100 100"
                >
                  <path
                    class="dcloud-progress-circle-trail"
                    d="M 50,50 m 0,-48
   a 48,48 0 1 1 0,96
   a 48,48 0 1 1 0,-96"
                    fill-opacity="0"
                    stroke-linecap="round"
                    stroke-width="4"
                    style="stroke-dasharray:301.59289474462014px 301.59289474462014px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
                  />
                  <path
                    class="dcloud-progress-circle-path"
                    d="M 50,50 m 0,-48
   a 48,48 0 1 1 0,96
   a 48,48 0 1 1 0,-96"
                    fill-opacity="0"
                    opacity="0"
                    stroke=""
                    stroke-linecap="round"
                    stroke-width="4"
                    style="stroke-dasharray:0px 301.59289474462014px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
                  />
                  <path
                    class="dcloud-progress-circle-path"
                    d="M 50,50 m 0,-48
   a 48,48 0 1 1 0,96
   a 48,48 0 1 1 0,-96"
                    fill-opacity="0"
                    opacity="0"
                    stroke=""
                    stroke-linecap="round"
                    stroke-width="4"
                    style="stroke:#52C41A;stroke-dasharray:0px 301.59289474462014px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
                  />
                </svg>
                <span
                  class="dcloud-progress-text"
                />
              </div>
            </div>
            <span
              class="dcloud-steps-icon"
            >
              2
            </span>
          </div>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            In Progress
            <div
              class="dcloud-steps-item-subtitle"
              title="Left 00:00:08"
            >
              Left 00:00:08
            </div>
          </div>
          <div
            class="dcloud-steps-item-description"
          >
            This is a description.
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-steps-item dcloud-steps-item-wait"
    >
      <div
        class="dcloud-steps-item-container"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <span
            class="dcloud-steps-icon"
          >
            3
          </span>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            Waiting
          </div>
          <div
            class="dcloud-steps-item-description"
          >
            This is a description.
          </div>
        </div>
      </div>
    </div>
  </div>,
  "2": <button
    class="dcloud-btn"
    type="button"
  >
    <span>
      Current +
    </span>
  </button>,
  "3": <button
    class="dcloud-btn"
    type="button"
  >
    <span>
      Status Wait
    </span>
  </button>,
  "4": <button
    class="dcloud-btn"
    type="button"
  >
    <span>
      Status Process
    </span>
  </button>,
  "5": <button
    class="dcloud-btn"
    type="button"
  >
    <span>
      Status Finish
    </span>
  </button>,
  "6": <button
    class="dcloud-btn"
    type="button"
  >
    <span>
      Status Error
    </span>
  </button>,
  "7": <div
    class="dcloud-steps dcloud-steps-horizontal dcloud-steps-with-progress dcloud-steps-label-horizontal"
  >
    <div
      class="dcloud-steps-item dcloud-steps-item-finish"
    >
      <div
        class="dcloud-steps-item-container"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <span
            class="dcloud-steps-icon"
          >
            <span
              aria-label="check"
              class="anticon anticon-check dcloud-steps-finish-icon"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="check"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"
                />
              </svg>
            </span>
          </span>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            Finished
          </div>
          <div
            class="dcloud-steps-item-description"
          >
            This is a description.
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-steps-item dcloud-steps-item-process dcloud-steps-item-active"
    >
      <div
        class="dcloud-steps-item-container"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <div
            class="dcloud-steps-progress-icon"
          >
            <div
              class="dcloud-progress dcloud-progress-circle dcloud-progress-status-normal dcloud-progress-show-info dcloud-progress-default"
            >
              <div
                class="dcloud-progress-inner"
                style="width:40px;height:40px;font-size:12px"
              >
                <svg
                  class="dcloud-progress-circle"
                  viewBox="0 0 100 100"
                >
                  <path
                    class="dcloud-progress-circle-trail"
                    d="M 50,50 m 0,-48
   a 48,48 0 1 1 0,96
   a 48,48 0 1 1 0,-96"
                    fill-opacity="0"
                    stroke-linecap="round"
                    stroke-width="4"
                    style="stroke-dasharray:301.59289474462014px 301.59289474462014px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
                  />
                  <path
                    class="dcloud-progress-circle-path"
                    d="M 50,50 m 0,-48
   a 48,48 0 1 1 0,96
   a 48,48 0 1 1 0,-96"
                    fill-opacity="0"
                    opacity="0"
                    stroke=""
                    stroke-linecap="round"
                    stroke-width="4"
                    style="stroke-dasharray:0px 301.59289474462014px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
                  />
                  <path
                    class="dcloud-progress-circle-path"
                    d="M 50,50 m 0,-48
   a 48,48 0 1 1 0,96
   a 48,48 0 1 1 0,-96"
                    fill-opacity="0"
                    opacity="0"
                    stroke=""
                    stroke-linecap="round"
                    stroke-width="4"
                    style="stroke:#52C41A;stroke-dasharray:0px 301.59289474462014px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
                  />
                </svg>
                <span
                  class="dcloud-progress-text"
                />
              </div>
            </div>
            <span
              class="dcloud-steps-icon"
            >
              2
            </span>
          </div>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            In Progress
            <div
              class="dcloud-steps-item-subtitle"
              title="Left 00:00:08"
            >
              Left 00:00:08
            </div>
          </div>
          <div
            class="dcloud-steps-item-description"
          >
            This is a description.
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-steps-item dcloud-steps-item-wait"
    >
      <div
        class="dcloud-steps-item-container"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <span
            class="dcloud-steps-icon"
          >
            3
          </span>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            Waiting
          </div>
          <div
            class="dcloud-steps-item-description"
          >
            This is a description.
          </div>
        </div>
      </div>
    </div>
  </div>,
  "8": <div
    class="dcloud-steps dcloud-steps-horizontal dcloud-steps-with-progress dcloud-steps-small dcloud-steps-label-horizontal"
  >
    <div
      class="dcloud-steps-item dcloud-steps-item-finish"
    >
      <div
        class="dcloud-steps-item-container"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <span
            class="dcloud-steps-icon"
          >
            <span
              aria-label="check"
              class="anticon anticon-check dcloud-steps-finish-icon"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="check"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"
                />
              </svg>
            </span>
          </span>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            Finished
          </div>
          <div
            class="dcloud-steps-item-description"
          >
            This is a description.
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-steps-item dcloud-steps-item-process dcloud-steps-item-active"
    >
      <div
        class="dcloud-steps-item-container"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <div
            class="dcloud-steps-progress-icon"
          >
            <div
              class="dcloud-progress dcloud-progress-circle dcloud-progress-status-normal dcloud-progress-show-info dcloud-progress-default"
            >
              <div
                class="dcloud-progress-inner"
                style="width:32px;height:32px;font-size:10.8px"
              >
                <svg
                  class="dcloud-progress-circle"
                  viewBox="0 0 100 100"
                >
                  <path
                    class="dcloud-progress-circle-trail"
                    d="M 50,50 m 0,-48
   a 48,48 0 1 1 0,96
   a 48,48 0 1 1 0,-96"
                    fill-opacity="0"
                    stroke-linecap="round"
                    stroke-width="4"
                    style="stroke-dasharray:301.59289474462014px 301.59289474462014px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
                  />
                  <path
                    class="dcloud-progress-circle-path"
                    d="M 50,50 m 0,-48
   a 48,48 0 1 1 0,96
   a 48,48 0 1 1 0,-96"
                    fill-opacity="0"
                    opacity="0"
                    stroke=""
                    stroke-linecap="round"
                    stroke-width="4"
                    style="stroke-dasharray:0px 301.59289474462014px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
                  />
                  <path
                    class="dcloud-progress-circle-path"
                    d="M 50,50 m 0,-48
   a 48,48 0 1 1 0,96
   a 48,48 0 1 1 0,-96"
                    fill-opacity="0"
                    opacity="0"
                    stroke=""
                    stroke-linecap="round"
                    stroke-width="4"
                    style="stroke:#52C41A;stroke-dasharray:0px 301.59289474462014px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
                  />
                </svg>
                <span
                  class="dcloud-progress-text"
                />
              </div>
            </div>
            <span
              class="dcloud-steps-icon"
            >
              2
            </span>
          </div>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            In Progress
            <div
              class="dcloud-steps-item-subtitle"
              title="Left 00:00:08"
            >
              Left 00:00:08
            </div>
          </div>
          <div
            class="dcloud-steps-item-description"
          >
            This is a description.
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-steps-item dcloud-steps-item-wait"
    >
      <div
        class="dcloud-steps-item-container"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <span
            class="dcloud-steps-icon"
          >
            3
          </span>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            Waiting
          </div>
          <div
            class="dcloud-steps-item-description"
          >
            This is a description.
          </div>
        </div>
      </div>
    </div>
  </div>,
  "9": <div
    class="dcloud-steps dcloud-steps-vertical dcloud-steps-with-progress"
  >
    <div
      class="dcloud-steps-item dcloud-steps-item-finish"
    >
      <div
        class="dcloud-steps-item-container"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <span
            class="dcloud-steps-icon"
          >
            <span
              aria-label="check"
              class="anticon anticon-check dcloud-steps-finish-icon"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="check"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"
                />
              </svg>
            </span>
          </span>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            Finished
          </div>
          <div
            class="dcloud-steps-item-description"
          >
            This is a description.
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-steps-item dcloud-steps-item-process dcloud-steps-item-active"
    >
      <div
        class="dcloud-steps-item-container"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <div
            class="dcloud-steps-progress-icon"
          >
            <div
              class="dcloud-progress dcloud-progress-circle dcloud-progress-status-normal dcloud-progress-show-info dcloud-progress-default"
            >
              <div
                class="dcloud-progress-inner"
                style="width:40px;height:40px;font-size:12px"
              >
                <svg
                  class="dcloud-progress-circle"
                  viewBox="0 0 100 100"
                >
                  <path
                    class="dcloud-progress-circle-trail"
                    d="M 50,50 m 0,-48
   a 48,48 0 1 1 0,96
   a 48,48 0 1 1 0,-96"
                    fill-opacity="0"
                    stroke-linecap="round"
                    stroke-width="4"
                    style="stroke-dasharray:301.59289474462014px 301.59289474462014px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
                  />
                  <path
                    class="dcloud-progress-circle-path"
                    d="M 50,50 m 0,-48
   a 48,48 0 1 1 0,96
   a 48,48 0 1 1 0,-96"
                    fill-opacity="0"
                    opacity="0"
                    stroke=""
                    stroke-linecap="round"
                    stroke-width="4"
                    style="stroke-dasharray:0px 301.59289474462014px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
                  />
                  <path
                    class="dcloud-progress-circle-path"
                    d="M 50,50 m 0,-48
   a 48,48 0 1 1 0,96
   a 48,48 0 1 1 0,-96"
                    fill-opacity="0"
                    opacity="0"
                    stroke=""
                    stroke-linecap="round"
                    stroke-width="4"
                    style="stroke:#52C41A;stroke-dasharray:0px 301.59289474462014px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
                  />
                </svg>
                <span
                  class="dcloud-progress-text"
                />
              </div>
            </div>
            <span
              class="dcloud-steps-icon"
            >
              2
            </span>
          </div>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            In Progress
            <div
              class="dcloud-steps-item-subtitle"
              title="Left 00:00:08"
            >
              Left 00:00:08
            </div>
          </div>
          <div
            class="dcloud-steps-item-description"
          >
            This is a description.
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-steps-item dcloud-steps-item-wait"
    >
      <div
        class="dcloud-steps-item-container"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <span
            class="dcloud-steps-icon"
          >
            3
          </span>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            Waiting
          </div>
          <div
            class="dcloud-steps-item-description"
          >
            This is a description.
          </div>
        </div>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 11,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/steps/demo/progress-dot.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-steps dcloud-steps-horizontal dcloud-steps-label-vertical dcloud-steps-dot"
  >
    <div
      class="dcloud-steps-item dcloud-steps-item-finish"
    >
      <div
        class="dcloud-steps-item-container"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <span
            class="dcloud-steps-icon"
          >
            <span
              class="dcloud-steps-icon-dot"
            />
          </span>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            Finished
          </div>
          <div
            class="dcloud-steps-item-description"
          >
            This is a description.
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-steps-item dcloud-steps-item-process dcloud-steps-item-active"
    >
      <div
        class="dcloud-steps-item-container"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <span
            class="dcloud-steps-icon"
          >
            <span
              class="dcloud-steps-icon-dot"
            />
          </span>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            In Progress
          </div>
          <div
            class="dcloud-steps-item-description"
          >
            This is a description.
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-steps-item dcloud-steps-item-wait"
    >
      <div
        class="dcloud-steps-item-container"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <span
            class="dcloud-steps-icon"
          >
            <span
              class="dcloud-steps-icon-dot"
            />
          </span>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            Waiting
          </div>
          <div
            class="dcloud-steps-item-description"
          >
            This is a description.
          </div>
        </div>
      </div>
    </div>
  </div>,
  "1": <div
    class="dcloud-divider dcloud-divider-horizontal"
    role="separator"
  />,
  "2": <div
    class="dcloud-steps dcloud-steps-vertical dcloud-steps-dot"
  >
    <div
      class="dcloud-steps-item dcloud-steps-item-finish"
    >
      <div
        class="dcloud-steps-item-container"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <span
            class="dcloud-steps-icon"
          >
            <span
              class="dcloud-steps-icon-dot"
            />
          </span>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            Finished
          </div>
          <div
            class="dcloud-steps-item-description"
          >
            This is a description. This is a description.
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-steps-item dcloud-steps-item-process dcloud-steps-item-active"
    >
      <div
        class="dcloud-steps-item-container"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <span
            class="dcloud-steps-icon"
          >
            <span
              class="dcloud-steps-icon-dot"
            />
          </span>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            Finished
          </div>
          <div
            class="dcloud-steps-item-description"
          >
            This is a description. This is a description.
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-steps-item dcloud-steps-item-wait"
    >
      <div
        class="dcloud-steps-item-container"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <span
            class="dcloud-steps-icon"
          >
            <span
              class="dcloud-steps-icon-dot"
            />
          </span>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            In Progress
          </div>
          <div
            class="dcloud-steps-item-description"
          >
            This is a description. This is a description.
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-steps-item dcloud-steps-item-wait"
    >
      <div
        class="dcloud-steps-item-container"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <span
            class="dcloud-steps-icon"
          >
            <span
              class="dcloud-steps-icon-dot"
            />
          </span>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            Waiting
          </div>
          <div
            class="dcloud-steps-item-description"
          >
            This is a description.
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-steps-item dcloud-steps-item-wait"
    >
      <div
        class="dcloud-steps-item-container"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <span
            class="dcloud-steps-icon"
          >
            <span
              class="dcloud-steps-icon-dot"
            />
          </span>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            Waiting
          </div>
          <div
            class="dcloud-steps-item-description"
          >
            This is a description.
          </div>
        </div>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 3,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/steps/demo/simple.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-steps dcloud-steps-horizontal dcloud-steps-label-horizontal"
  >
    <div
      class="dcloud-steps-item dcloud-steps-item-finish"
    >
      <div
        class="dcloud-steps-item-container"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <span
            class="dcloud-steps-icon"
          >
            <span
              aria-label="check"
              class="anticon anticon-check dcloud-steps-finish-icon"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="check"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"
                />
              </svg>
            </span>
          </span>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            Finished
          </div>
          <div
            class="dcloud-steps-item-description"
          >
            This is a description.
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-steps-item dcloud-steps-item-process dcloud-steps-item-active"
    >
      <div
        class="dcloud-steps-item-container"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <span
            class="dcloud-steps-icon"
          >
            2
          </span>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            In Progress
            <div
              class="dcloud-steps-item-subtitle"
              title="Left 00:00:08"
            >
              Left 00:00:08
            </div>
          </div>
          <div
            class="dcloud-steps-item-description"
          >
            This is a description.
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-steps-item dcloud-steps-item-wait"
    >
      <div
        class="dcloud-steps-item-container"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <span
            class="dcloud-steps-icon"
          >
            3
          </span>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            Waiting
          </div>
          <div
            class="dcloud-steps-item-description"
          >
            This is a description.
          </div>
        </div>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/steps/demo/small-size.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-steps dcloud-steps-horizontal dcloud-steps-small dcloud-steps-label-horizontal"
  >
    <div
      class="dcloud-steps-item dcloud-steps-item-finish"
    >
      <div
        class="dcloud-steps-item-container"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <span
            class="dcloud-steps-icon"
          >
            <span
              aria-label="check"
              class="anticon anticon-check dcloud-steps-finish-icon"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="check"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"
                />
              </svg>
            </span>
          </span>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            Finished
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-steps-item dcloud-steps-item-process dcloud-steps-item-active"
    >
      <div
        class="dcloud-steps-item-container"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <span
            class="dcloud-steps-icon"
          >
            2
          </span>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            In Progress
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-steps-item dcloud-steps-item-wait"
    >
      <div
        class="dcloud-steps-item-container"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <span
            class="dcloud-steps-icon"
          >
            3
          </span>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            Waiting
          </div>
        </div>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/steps/demo/step-next.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-steps dcloud-steps-horizontal dcloud-steps-label-horizontal"
  >
    <div
      class="dcloud-steps-item dcloud-steps-item-process dcloud-steps-item-active"
    >
      <div
        class="dcloud-steps-item-container"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <span
            class="dcloud-steps-icon"
          >
            1
          </span>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            First
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-steps-item dcloud-steps-item-wait"
    >
      <div
        class="dcloud-steps-item-container"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <span
            class="dcloud-steps-icon"
          >
            2
          </span>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            Second
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-steps-item dcloud-steps-item-wait"
    >
      <div
        class="dcloud-steps-item-container"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <span
            class="dcloud-steps-icon"
          >
            3
          </span>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            Last
          </div>
        </div>
      </div>
    </div>
  </div>,
  "1": <div
    class="steps-content"
  >
    First-content
  </div>,
  "2": <div
    class="steps-action"
  >
    <button
      class="dcloud-btn dcloud-btn-primary"
      type="button"
    >
      <span>
        Next
      </span>
    </button>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 3,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/steps/demo/steps-in-steps.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-radio-group dcloud-radio-group-outline"
    style="margin-bottom:16px"
  >
    <label
      class="dcloud-radio-wrapper"
    >
      <span
        class="dcloud-radio"
      >
        <input
          class="dcloud-radio-input"
          type="radio"
          value="small"
        />
        <span
          class="dcloud-radio-inner"
        />
      </span>
      <span>
        Small
      </span>
    </label>
    <label
      class="dcloud-radio-wrapper dcloud-radio-wrapper-checked"
    >
      <span
        class="dcloud-radio dcloud-radio-checked"
      >
        <input
          checked=""
          class="dcloud-radio-input"
          type="radio"
          value="default"
        />
        <span
          class="dcloud-radio-inner"
        />
      </span>
      <span>
        Default
      </span>
    </label>
  </div>,
  "1": <div
    class="dcloud-steps dcloud-steps-vertical dcloud-steps-default"
  >
    <div
      class="dcloud-steps-item dcloud-steps-item-process dcloud-steps-item-active"
    >
      <div
        class="dcloud-steps-item-container"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <span
            class="dcloud-steps-icon"
          >
            1
          </span>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            Finished
          </div>
          <div
            class="dcloud-steps-item-description"
          >
            <div
              class="dcloud-card dcloud-card-bordered"
            >
              <div
                class="dcloud-card-body"
              >
                <div
                  class="dcloud-steps dcloud-steps-horizontal dcloud-steps-default dcloud-steps-label-horizontal"
                >
                  <div
                    class="dcloud-steps-item dcloud-steps-item-process dcloud-steps-item-active"
                  >
                    <div
                      class="dcloud-steps-item-container"
                    >
                      <div
                        class="dcloud-steps-item-tail"
                      />
                      <div
                        class="dcloud-steps-item-icon"
                      >
                        <span
                          class="dcloud-steps-icon"
                        >
                          1
                        </span>
                      </div>
                      <div
                        class="dcloud-steps-item-content"
                      >
                        <div
                          class="dcloud-steps-item-title"
                        >
                          Finished
                        </div>
                        <div
                          class="dcloud-steps-item-description"
                        >
                          This is a description.
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="dcloud-steps-item dcloud-steps-item-wait"
                  >
                    <div
                      class="dcloud-steps-item-container"
                    >
                      <div
                        class="dcloud-steps-item-tail"
                      />
                      <div
                        class="dcloud-steps-item-icon"
                      >
                        <span
                          class="dcloud-steps-icon"
                        >
                          2
                        </span>
                      </div>
                      <div
                        class="dcloud-steps-item-content"
                      >
                        <div
                          class="dcloud-steps-item-title"
                        >
                          In Progress
                        </div>
                        <div
                          class="dcloud-steps-item-description"
                        >
                          This is a description.
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="dcloud-steps-item dcloud-steps-item-wait"
                  >
                    <div
                      class="dcloud-steps-item-container"
                    >
                      <div
                        class="dcloud-steps-item-tail"
                      />
                      <div
                        class="dcloud-steps-item-icon"
                      >
                        <span
                          class="dcloud-steps-icon"
                        >
                          3
                        </span>
                      </div>
                      <div
                        class="dcloud-steps-item-content"
                      >
                        <div
                          class="dcloud-steps-item-title"
                        >
                          Waiting
                        </div>
                        <div
                          class="dcloud-steps-item-description"
                        >
                          This is a description.
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-steps-item dcloud-steps-item-wait"
    >
      <div
        class="dcloud-steps-item-container"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <span
            class="dcloud-steps-icon"
          >
            2
          </span>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            In Progress
          </div>
          <div
            class="dcloud-steps-item-description"
          >
            This is a description.
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-steps-item dcloud-steps-item-wait"
    >
      <div
        class="dcloud-steps-item-container"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <span
            class="dcloud-steps-icon"
          >
            3
          </span>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            Waiting
          </div>
          <div
            class="dcloud-steps-item-description"
          >
            This is a description.
          </div>
        </div>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 2,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/steps/demo/vertical.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-steps dcloud-steps-vertical"
  >
    <div
      class="dcloud-steps-item dcloud-steps-item-finish"
    >
      <div
        class="dcloud-steps-item-container"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <span
            class="dcloud-steps-icon"
          >
            <span
              aria-label="check"
              class="anticon anticon-check dcloud-steps-finish-icon"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="check"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"
                />
              </svg>
            </span>
          </span>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            Finished
          </div>
          <div
            class="dcloud-steps-item-description"
          >
            This is a description.
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-steps-item dcloud-steps-item-process dcloud-steps-item-active"
    >
      <div
        class="dcloud-steps-item-container"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <span
            class="dcloud-steps-icon"
          >
            2
          </span>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            In Progress
          </div>
          <div
            class="dcloud-steps-item-description"
          >
            This is a description.
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-steps-item dcloud-steps-item-wait"
    >
      <div
        class="dcloud-steps-item-container"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <span
            class="dcloud-steps-icon"
          >
            3
          </span>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            Waiting
          </div>
          <div
            class="dcloud-steps-item-description"
          >
            This is a description.
          </div>
        </div>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/steps/demo/vertical-small.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-steps dcloud-steps-vertical dcloud-steps-small"
  >
    <div
      class="dcloud-steps-item dcloud-steps-item-finish"
    >
      <div
        class="dcloud-steps-item-container"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <span
            class="dcloud-steps-icon"
          >
            <span
              aria-label="check"
              class="anticon anticon-check dcloud-steps-finish-icon"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="check"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"
                />
              </svg>
            </span>
          </span>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            Finished
          </div>
          <div
            class="dcloud-steps-item-description"
          >
            This is a description.
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-steps-item dcloud-steps-item-process dcloud-steps-item-active"
    >
      <div
        class="dcloud-steps-item-container"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <span
            class="dcloud-steps-icon"
          >
            2
          </span>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            In Progress
          </div>
          <div
            class="dcloud-steps-item-description"
          >
            This is a description.
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-steps-item dcloud-steps-item-wait"
    >
      <div
        class="dcloud-steps-item-container"
      >
        <div
          class="dcloud-steps-item-tail"
        />
        <div
          class="dcloud-steps-item-icon"
        >
          <span
            class="dcloud-steps-icon"
          >
            3
          </span>
        </div>
        <div
          class="dcloud-steps-item-content"
        >
          <div
            class="dcloud-steps-item-title"
          >
            Waiting
          </div>
          <div
            class="dcloud-steps-item-description"
          >
            This is a description.
          </div>
        </div>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;
